--- a/spring-singleton/pom.xml
+++ b/spring-singleton/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>spring-learning</artifactId>
+        <groupId>com.jinliang</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jinliang</groupId>
-    <artifactId>spring-learning</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>spring-proxy</module>
-        <module>spring-factory</module>
-        <module>spring-singleton</module>
-    </modules>
+    <artifactId>spring-singleton</artifactId>
 
 
 </project>
